--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,1 +1,10 @@
+---
+- name: update web servers
+  hosts: webservers
+  remote_user: root
 
+  tasks:
+  - name: ensure htop is at the latest version
+    yum:
+      name: htop
+      state: latest
