--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,4 +1,4 @@
-default ansible_ssh_host=127.0.0.1 ansible_ssh_port=22 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.ppk
+default ansible_ssh_host=127.0.0.1 ansible_ssh_port=22 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
 
 [nfs]
 172.31.23.11
