--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,8 +1,8 @@
-default ansible_ssh_host=127.0.0.1 ansible_ssh_port=22 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
+#default ansible_ssh_host=127.0.0.1 ansible_ssh_port=22 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
 
 [nfs]
-172.31.23.11
+172.31.23.11 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
 
 [webservers]
-172.31.20.116
-172.31.20.118
+172.31.20.116 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
+172.31.20.118 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
