--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -6,3 +6,6 @@
 [webservers]
 172.31.20.116 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
 172.31.20.118 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
+
+[lb]
+172.31.20.200 ansible_ssh_user='ubuntu' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
