--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,5 +1,5 @@
 ---
-- name: update web servers
+- name: update web, nfs and db servers
   hosts: webservers, nfs
   remote_user: ec2-user
   become: yes
@@ -7,5 +7,16 @@
   tasks:
   - name: ensure wireshark is at the latest version
     yum:
+      name: wireshark
+      state: latest
+
+- name: update LB server
+  hosts: lb
+  remote_user: ubuntu
+  become: yes
+  become_user: root
+  tasks:
+  - name: ensure wireshark is at the latest version
+    apt:
       name: wireshark
       state: latest
