--- a/static-assignments/common-del.yml
+++ b/static-assignments/common-del.yml
@@ -16,9 +16,11 @@
   become: yes
   become_user: root
   tasks:
-  #- name: delete wireshark
-  #  apt:
-  #    name: wireshark
-  #    state: absent
+  - name: apt update
+    apt:
+      update_cache: yes
   - name: delete wireshark
-    action: apt pkg=wireshark state=absent
+    apt:
+      name: wireshark
+      state: absent
+
