--- a/static-assignments/common-del.yml
+++ b/static-assignments/common-del.yml
@@ -19,6 +19,9 @@
   - name: apt update
     apt:
       update_cache: yes
+  - name: Remove useless packages from the cache
+    apt:
+      autoclean: yes
   - name: delete wireshark
     apt:
       name: wireshark
