--- a/static-assignments/common-del.yml
+++ b/static-assignments/common-del.yml
@@ -24,7 +24,7 @@
       autoclean: yes
   - name: delete wireshark
     apt:
-      name: wireshark
+      name: wireshark-qt
       state: absent
       autoremove: yes
       purge: yes
