--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,11 +1,11 @@
 #default ansible_ssh_host=127.0.0.1 ansible_ssh_port=22 ansible_ssh_user='ec2-user' ansible_ssh_private_key_file=/home/ubuntu/Devops.pem
 
 [nfs]
-ansible_ssh_host=172.31.23.11 ansible_ssh_user='ec2-user'
+172.31.23.11 ansible_ssh_user='ec2-user'
 
 [webservers]
-ansible_ssh_host=172.31.20.116 ansible_ssh_user='ec2-user'
-ansible_ssh_host=172.31.20.118 ansible_ssh_user='ec2-user'
+172.31.20.116 ansible_ssh_user='ec2-user'
+172.31.20.118 ansible_ssh_user='ec2-user'
 
 [lb]
-ansible_ssh_host=172.31.20.200 ansible_ssh_user='ubuntu'
+172.31.20.200 ansible_ssh_user='ubuntu'
